err/swissdta.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/iso3166'...
Listing './lib/python3.5/site-packages/iso3166-0.8.dist-info'...
Listing './lib/python3.5/site-packages/iso4217'...
Listing './lib/python3.5/site-packages/iso4217-1.5.20180101.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/schwifty'...
Listing './lib/python3.5/site-packages/schwifty-2.1.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/swissdta'...
Compiling './lib/python3.5/site-packages/swissdta/fields.py'...
***   File "./lib/python3.5/site-packages/swissdta/fields.py", line 62
    return f'<{self.__class__.__name__}(length={self.length}, name={name})>'
                                                                           ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/swissdta/file.py'...
***   File "./lib/python3.5/site-packages/swissdta/file.py", line 31
    MAX_RECORDS: int = 99_998
               ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/swissdta/records'...
Compiling './lib/python3.5/site-packages/swissdta/records/common.py'...
***   File "./lib/python3.5/site-packages/swissdta/records/common.py", line 35
    self.__validation_warnings[field_name].append(f'[{field_name}] {warning}')
                                                                            ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/swissdta/records/record836.py'...
***   File "./lib/python3.5/site-packages/swissdta/records/record836.py", line 179
    reference=f'{self.header.sender_id}{self.reference}',
                                                       ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/swissdta-1.0.1.dist-info'...
Listing './lib/python3.5/site-packages/tests'...
Compiling './lib/python3.5/site-packages/tests/test_field_amount.py'...
***   File "./lib/python3.5/site-packages/tests/test_field_amount.py", line 23
    (Decimal(0b11_11), '15,     '),
                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/tests/test_field_numeric.py'...
***   File "./lib/python3.5/site-packages/tests/test_field_numeric.py", line 21
    (1_4_3, tuple()),
         ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/tests/test_file.py'...
***   File "./lib/python3.5/site-packages/tests/test_file.py", line 159
    assert (f"[reference] DUPLICATE TRANSACTION NUMBER: reference '{record.reference}' is present more than once."
                                                                                                                 ^
SyntaxError: invalid syntax

Listing './share'...
Listing './share/python-wheels'...
